Counts Activity and Fragment instances.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">LifeCycle</string>
+    <string name="activity_count">Activity %1$d</string>
+    <string name="fragment_count">Fragment %1$d</string>
 </resources>
